/*
  Rewards calculator

  API to show the rewards for customers based on recorded purchases.

  The version of the OpenAPI document: 1.0.0

  Generated by OpenAPI Generator: https://openapi-generator.tech
*/

syntax = "proto3";

package openapitools.services.ordersservice;

import "google/protobuf/empty.proto";
import public "models/orders.proto";

service OrdersService {
  rpc GetOrdersByCustomerId (GetOrdersByCustomerIdRequest) returns (Orders);

  rpc PostOrdersByCustomerId (PostOrdersByCustomerIdRequest) returns (Orders);

}

message GetOrdersByCustomerIdRequest {
  // customer id
  string customerId = 1;

}

message PostOrdersByCustomerIdRequest {
  // customer id
  string customerId = 1;

}

